--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "react-slick": "^0.23.1",
-    "react-transition-group": "^2.3.1"
+    "react-transition-group": "^2.3.1",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
