--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "animate.css": "^3.6.1",
+    "jquery": "^3.3.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-reveal": "^1.2.2",
